# ai_prompt

./: .env.example  .gitignore  README.md  pyproject.toml
src/ai_context/: __init__.py  main.py  settings.py
src/ai_context/cli/: app.py  commands_init.py
src/ai_context/generators/: __init__.py  architecture_generator.py  setup_generator.py  skills_generator.py  spec_generator.py  task_generator.py
src/ai_context/llm/: __init__.py  client.py
src/ai_context/prompts/: architecture.system.txt  architecture.user.txt  setup.system.txt  setup.user.txt  spec.system.txt  spec.user.txt  tasks.system.txt  tasks.user.txt
src/ai_context/renderers/: __init__.py  markdown_renderer.py
src/ai_context/schemas/: __init__.py  architecture.py  project.py  setup.py  skills.py  tasks.py  workflow.py
src/ai_context/skills/python_async/: pitfalls.md  rules.md
src/ai_context/skills/telegram_bot/: architecture.md  pitfalls.md  rules.md
src/ai_context/storage/: __init__.py  state_store.py
src/ai_context/templates/: ARCHITECTURE.md.j2  CURSOR_CONTEXT.md.j2  CURSOR_EXECUTION_MODE.md.j2  MCP.md.j2  README.md.j2  SESSION_HANDOFF.md.j2  SESSION_PROMPT.md.j2  SKILLS.md.j2  TASKS.md.j2  WORKFLOW_REPORT.md.j2
src/ai_context/utils/: __init__.py  prompt_loader.py
src/ai_context/workflows/: __init__.py  workflow_analyzer.py
