[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ai-context"
version = "0.1.0"
description = "CLI-first AI context generation tool for AI-assisted development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "openai>=1.40.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
]

[project.scripts]
ai-context = "ai_context.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_context"]

[tool.ruff]
line-length = 100
target-version = "py312"
